Don't error CI on missing commit

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,5 +1,5 @@
 name: Update data
-on: 
+on:
   schedule:
     - cron:  '0 4 * * *'
 jobs:
@@ -29,8 +29,6 @@ jobs:
           git config user.name "Update Bot"
           git checkout master
           git add data/doha-amendment.csv
-          git commit -F message.txt 
+          git commit -F message.txt && \
+            git push https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git master || true
           git log -n 2
-          git push https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git master
-          
-        
