--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -30,5 +30,6 @@ jobs:
           git checkout master
           git add data/doha-amendment.csv
           git commit -F message.txt && \
-            git push https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git master || true
-          git log -n 2
+            git push https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git master && \
+            git log -n 1 || true
+
